@@ -1,0 +1,14 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+datarootdir=@datarootdir@
+
+Name: rivet
+Description: Rivet MC analysis library
+URL: https://rivet.hepforge.org
+Version: @VERSION@
+#Requires: yoda
+Libs: -L@libdir@ -L@HEPMCLIBPATH@ -L@YODALIBPATH@ -L@FASTJETCONFIGLIBADD@ -L@GSLLIBPATH@ -lRivet
+Cflags: -I@includedir@ -I@HEPMCINCPATH@ -I@YODAINCPATH@ -I@FASTJETINCPATH@ -I@GSLINCPATH@
+#-I@BOOST_CPPFLAGS@
