@@ -1,5 +1,7 @@
 2014-04-13  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Adding a rivet.pc template file and installation rule for pkg-config to use.
+
 	* Updating data/refdata/ALEPH_2001_S4656318.yoda to corrected version in HepData.
 
 2014-03-27  Andy Buckley  <andy.buckley@cern.ch>
